--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "SET NODE_ENV=test&& jamine"
+    "test": "SET NODE_ENV=test&& jamine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "express-validator": "^5.3.1",
     "faker": "^4.1.0",
     "jasmine": "^3.3.1",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.7.1",
