--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "SET NODE_ENV=test&& jamine",
+    "test": "SET NODE_ENV=test&& jasmine",
     "start": "node src/server.js"
   },
   "repository": {
@@ -20,6 +20,10 @@
     "url": "https://github.com/nbjames2/blocipedia-node/issues"
   },
   "homepage": "https://github.com/nbjames2/blocipedia-node#readme",
+  "devDependencies": {
+    "jasmine": "^3.3.1",
+    "request": "^2.88.0"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -29,14 +33,11 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
-    "faker": "^4.1.0",
-    "jasmine": "^3.3.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
-    "request": "^2.88.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0"
   }
