user sign up complete... again

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 megasecret="there is no spoon"
 cookieSecret="do not let this get checked into version control"
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY="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"
