upgrading account checkpoint complete

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 megasecret="there is no spoon"
 cookieSecret="do not let this get checked into version control"
 SENDGRID_API_KEY="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"
+Stripe_Key="sk_test_lXeP9aJy3ilcYGzg0mgOdrmW"
